[package]
name = "pc_rs"
version = "0.0.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "digest", "ff", "group", "group-bits", "serde", "legacy_compatibility"] }
rand = "0.8.5"
